// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c10 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c10 + .c9 {
  margin-top: -1px !important;
}

.c10:last-child {
  margin-bottom: 30px;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c9 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c14 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c12 {
  max-width: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: none;
}

.c8 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c10 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c10 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c13 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S3 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S4 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S5 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S6 {
  line-height: 15px;
  margin-top: 5px;
}

.S7 {
  line-height: 17px;
}

.S8 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: rgba(255, 255, 255, 1);
}

.IS3 {
  color: rgba(255,255,255,1.00);
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsive__HeaderContainer-sc-3t8ix5-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S4"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S1"
            >
              <div
                className="c4 IS2"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c5 css-reset-4rbku5 responsive__HeadlineContainer-sc-3t8ix5-3 c5 css-text-901oao r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S2"
            >
              Some Headline
            </h1>
            <div
              className="c6 responsive__FlagsContainer-sc-3t8ix5-1 c6 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c7 css-reset-4rbku5 responsive__StandfirstContainer-sc-3t8ix5-8 c7 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S3"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c8 IS6"
        />
        <div
          className="c9 c10"
        >
          <div
            className="c11 responsive__MetaContainer-sc-3t8ix5-6 c11 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S5"
          >
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c13 responsive__Separator-sc-3t8ix5-7 c13 css-view-1dbjc4n"
            />
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <div
                className="c14 responsive__DatePublicationContainer-sc-3t8ix5-0 c14 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c9 c15 c16"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            className="IS13"
          >
            <div
              className="c26 IS12"
            >
              <div
                className="c26 IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S8"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S7"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c10 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c10 + .c9 {
  margin-top: -1px !important;
}

.c10:last-child {
  margin-bottom: 30px;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c9 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c14 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c12 {
  max-width: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: none;
}

.c8 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c10 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c10 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c13 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S3 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S4 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S5 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S6 {
  line-height: 15px;
  margin-top: 5px;
}

.S7 {
  line-height: 17px;
}

.S8 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: rgba(255, 255, 255, 1);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Flama-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsive__HeaderContainer-sc-3t8ix5-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S4"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S1"
            >
              <div
                className="c4 IS2"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c5 css-reset-4rbku5 responsive__HeadlineContainer-sc-3t8ix5-3 c5 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S2"
            >
              Some Headline
            </h1>
            <div
              className="c6 responsive__FlagsContainer-sc-3t8ix5-1 c6 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c7 css-reset-4rbku5 responsive__StandfirstContainer-sc-3t8ix5-8 c7 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S3"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c8 IS6"
        />
        <div
          className="c9 c10"
        >
          <div
            className="c11 responsive__MetaContainer-sc-3t8ix5-6 c11 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S5"
          >
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c13 responsive__Separator-sc-3t8ix5-7 c13 css-view-1dbjc4n"
            />
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <div
                className="c14 responsive__DatePublicationContainer-sc-3t8ix5-0 c14 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c9 c15 c16"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            className="IS13"
          >
            <div
              className="c26 IS12"
            >
              <div
                className="c26 IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S8"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S7"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c10 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c10 + .c9 {
  margin-top: -1px !important;
}

.c10:last-child {
  margin-bottom: 30px;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c9 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c14 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c12 {
  max-width: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: none;
}

.c8 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c10 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c10 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c13 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S3 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S4 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S5 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S6 {
  line-height: 15px;
  margin-top: 5px;
}

.S7 {
  line-height: 17px;
}

.S8 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: rgba(255, 255, 255, 1);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: CenturyGothic-Bold;
  text-transform: uppercase;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsive__HeaderContainer-sc-3t8ix5-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S4"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S1"
            >
              <div
                className="c4 IS2"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c5 css-reset-4rbku5 responsive__HeadlineContainer-sc-3t8ix5-3 c5 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S2"
            >
              Some Headline
            </h1>
            <div
              className="c6 responsive__FlagsContainer-sc-3t8ix5-1 c6 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c7 css-reset-4rbku5 responsive__StandfirstContainer-sc-3t8ix5-8 c7 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S3"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c8 IS6"
        />
        <div
          className="c9 c10"
        >
          <div
            className="c11 responsive__MetaContainer-sc-3t8ix5-6 c11 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S5"
          >
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c13 responsive__Separator-sc-3t8ix5-7 c13 css-view-1dbjc4n"
            />
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <div
                className="c14 responsive__DatePublicationContainer-sc-3t8ix5-0 c14 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c9 c15 c16"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            className="IS13"
          >
            <div
              className="c26 IS12"
            >
              <div
                className="c26 IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S8"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S7"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c10 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c10 + .c9 {
  margin-top: -1px !important;
}

.c10:last-child {
  margin-bottom: 30px;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c9 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c14 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c12 {
  max-width: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  display: none;
}

.c8 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c10 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c10 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c13 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S3 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S4 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S5 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S6 {
  line-height: 15px;
  margin-top: 5px;
}

.S7 {
  line-height: 17px;
}

.S8 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: rgba(255, 255, 255, 1);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsive__HeaderContainer-sc-3t8ix5-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S4"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S1"
            >
              <div
                className="c4 IS2"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c5 css-reset-4rbku5 responsive__HeadlineContainer-sc-3t8ix5-3 c5 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S2"
            >
              Some Headline
            </h1>
            <div
              className="c6 responsive__FlagsContainer-sc-3t8ix5-1 c6 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c7 css-reset-4rbku5 responsive__StandfirstContainer-sc-3t8ix5-8 c7 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S3"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c8 IS6"
        />
        <div
          className="c9 c10"
        >
          <div
            className="c11 responsive__MetaContainer-sc-3t8ix5-6 c11 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S5"
          >
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c13 responsive__Separator-sc-3t8ix5-7 c13 css-view-1dbjc4n"
            />
            <div
              className="c12 responsive__Meta-sc-3t8ix5-5 c12 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S5"
            >
              <div
                className="c14 responsive__DatePublicationContainer-sc-3t8ix5-0 c14 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c9 c15 c16"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            className="IS13"
          >
            <div
              className="c26 IS12"
            >
              <div
                className="c26 IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S8"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S7"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
